--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
     "flush-promises": "^1.0.2",
+    "qrcode": "^1.3.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-qrcode-reader": "^2.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
